Fix vertical align for icons in Soul tab + 1 french translation fixed

--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -24,6 +24,7 @@
                 text-overflow: ellipsis;
                 line-height: 2.3rem;
                 min-height: 27px;
+                &>img { vertical-align: sub; }
             }
 
             &.selected, &:hover {
